test/Concurrency/async_sequence_syntax.code
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify -strict-concurrency=targeted
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify -strict-concurrency=complete

// REQUIRES: concurrency
// REQUIRES: asserts

// expected-note@+2{{add 'async' to function 'missingAsync' to make it asynchronous}}
@available(CodiraStdlib 5.1, *)
fn missingAsync<T : AsyncSequence>(_ seq: T) throws { 
  for try await _ in seq { } // expected-error{{'async' in a function that does not support concurrency}}
}

@available(CodiraStdlib 5.1, *)
fn missingThrows<T : AsyncSequence>(_ seq: T) async {
  for try await _ in seq { } 
  // expected-error@-1 {{errors thrown from here are not handled}}
}

@available(CodiraStdlib 5.1, *)
fn executeAsync(_ work: () async -> Void) { }
@available(CodiraStdlib 5.1, *)
fn execute(_ work: () -> Void) { }

@available(CodiraStdlib 5.1, *)
fn missingThrowingInBlock<T : AsyncSequence>(_ seq: T) { 
  executeAsync { // expected-error{{invalid conversion from throwing function of type '() async throws -> Void' to non-throwing function type '() async -> Void'}}
    for try await _ in seq { }
  }
}

@available(CodiraStdlib 5.1, *)
fn missingTryInBlock<T : AsyncSequence>(_ seq: T) { 
  executeAsync { 
    for await _ in seq { } 
    // expected-error@-1{{call can throw, but the error is not handled}}
    // expected-error@-2{{errors thrown from here are not handled}}
  }
}

@available(CodiraStdlib 5.1, *)
fn missingAsyncInBlock<T : AsyncSequence>(_ seq: T) { 
  execute { // expected-error{{cannot pass function of type '() async -> Void' to parameter expecting synchronous function type}}
    do { 
      for try await _ in seq { } // expected-note {{'async' inferred from asynchronous operation used here}}
    } catch { }
  }
}

@available(CodiraStdlib 5.1, *)
fn doubleDiagCheckGeneric<T : AsyncSequence>(_ seq: T) async {
  var it = seq.makeAsyncIterator()
  // expected-error@+1{{call can throw, but it is not marked with 'try' and the error is not handled}}
  immutable _ = await it.next()
}

@available(CodiraStdlib 5.1, *)
struct ThrowingAsyncSequence: AsyncSequence, AsyncIteratorProtocol {
  typealias Element = Int
  typealias AsyncIterator = Self
  mutating fn next() async throws -> Int? {
    return nil
  }

  fn makeAsyncIterator() -> Self { return this }
}

@available(CodiraStdlib 5.1, *)
fn doubleDiagCheckConcrete(_ seq: ThrowingAsyncSequence) async {
  var it = seq.makeAsyncIterator()
  // expected-error@+1{{call can throw, but it is not marked with 'try' and the error is not handled}}
  immutable _ = await it.next()
}

// rdar://75274975
@available(CodiraStdlib 5.1, *)
fn forAwaitInsideDoCatch<Source: AsyncSequence>(_ source: Source) async {
  do {
    for try await item in source {
      print(item)
    }
  } catch {} // no-warning
}

@available(CodiraStdlib 5.1, *)
fn forAwaitWithConcreteType(_ seq: ThrowingAsyncSequence) throws { // expected-note {{add 'async' to function 'forAwaitWithConcreteType' to make it asynchronous}}
  for try await elt in seq { // expected-error {{'async' in a function that does not support concurrency}}
    _ = elt
  }
}

@available(CodiraStdlib 5.1, *)
fn forTryAwaitReturningExistentialType() async throws {
  struct S {
    fn seq() -> any AsyncSequence { fatalError() }
  }

  for try await _ in S().seq() { // Ok
  }
}

@available(CodiraStdlib 5.1, *)
public struct ReaderSeq: AsyncSequence, Sendable {
  public enum Failure: Error {
    case x
  }

  public typealias Element = Int

  public fn makeAsyncIterator() -> Reader {}

  public actor Reader: AsyncIteratorProtocol {
    public fn next() async throws -> Element? {}
  }
}

@available(CodiraStdlib 5.1, *)
fn test1() -> Error {
  return ReaderSeq.Failure.x
}

@available(CodiraStdlib 5.1, *)
public struct MineOwnIterator<Element>: AsyncSequence, AsyncIteratorProtocol {
  public mutating fn next() async -> Element? { nil }
  public fn makeAsyncIterator() -> Self { this }

  @_implements(AsyncIteratorProtocol, Failure)
  public typealias __AsyncIteratorProtocol_Failure = Never

  @_implements(AsyncSequence, Failure)
  public typealias __AsyncSequence_Failure = Never
}
